--- a/src/pages/Auth/style.module.css
+++ b/src/pages/Auth/style.module.css
@@ -1,8 +1,9 @@
 .Page {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     width: 100%;
     min-height: calc(100vh - 94px);
     padding: 40px 0;
+    height: 100vh;
 }
