--- a/src/components/AuthContent/Code/style.module.css
+++ b/src/components/AuthContent/Code/style.module.css
@@ -93,3 +93,26 @@
     color: #AFABA8;
     cursor: pointer;
 }
+
+@media screen and (max-width: 600px) {
+    .Box h2 {
+        font-size: 24px;
+    }
+
+    .Section {
+        padding: 75px 25px;
+        gap: 20px;
+    }
+
+    .Box p {
+        font-size: 14px;
+    }
+
+    .Box {
+        gap: 14px;
+    }
+
+    .BottomBox p {
+        font-size: 12px;
+    }
+}
