--- a/src/components/AuthContent/Hello/style.module.css
+++ b/src/components/AuthContent/Hello/style.module.css
@@ -33,3 +33,25 @@
     font-size: 20px;
     line-height: 28px;
 }
+
+@media screen and (max-width: 600px) {
+    .Box h2 {
+        font-size: 24px;
+        color: #4C4C69;
+    }
+
+    .Section {
+        padding: 75px 0;
+        gap: 14px;
+        box-shadow: none;
+    }
+
+    .Box p {
+        font-size: 14px;
+        line-height: 16px;
+    }
+
+    .Box {
+        gap: 10px;
+    }
+}
