--- a/src/components/AuthContent/Phone/style.module.css
+++ b/src/components/AuthContent/Phone/style.module.css
@@ -68,3 +68,22 @@
 .Description a {
     color: #FF8702;
 }
+
+@media screen and (max-width: 600px) {
+    .Box h2 {
+        font-size: 24px;
+    }
+
+    .Section {
+        padding: 75px 25px;
+        gap: 20px;
+    }
+
+    .Box p {
+        font-size: 14px;
+    }
+
+    .Box {
+        gap: 14px;
+    }
+}
