--- a/src/components/Landing/Sections/1/style.module.css
+++ b/src/components/Landing/Sections/1/style.module.css
@@ -1,6 +1,6 @@
 .Section {
     width: 100%;
-    padding: 120px 0;
+    padding: 120px 15px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,6 +38,7 @@
     font-size: 15px;
     font-weight: 700;
     line-height: 17px;
+    background: #fff;
 }
 
 .Box {
@@ -76,9 +77,76 @@
     font-weight: 800;
     line-height: 41px;
     color: #1A3C51;
+    background: #fff;
 }
 
 .Box button {
     margin-top: 100px;
     width: fit-content;
+}
+
+@media screen and (max-width: 1160px) {
+    .Illustration {
+        position: static;
+        width: 100%;
+        height: auto;
+    }
+
+    .Container {
+        flex-direction: column-reverse;
+    }
+
+    .Section {
+        padding-top: 50px;
+    }
+
+    .Items {
+        position: absolute;
+        top: 0;
+        flex-direction: column-reverse;
+        align-items: flex-end;
+        right: 30px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .Price {
+        position: absolute;
+        font-size: 15px;
+        padding: 5px 9px;
+        line-height: 20.46px;
+        right: 30px;
+        margin-top: -50px;
+    }
+
+    .Box button {
+        margin-top: 10px;
+        width: 100%;
+        height: 55px;
+    }
+
+    .Box {
+        align-items: center;
+        text-align: center;
+        margin-top: 30px;
+    }
+
+    .Box h1 {
+        font-size: 37px;
+        line-height: 37px;
+    }
+
+    .Box h3 {
+        font-size: 20px;
+        line-height: 22px;
+    }
+
+    .Items {
+        top: -30px;
+        right: 15px;
+    }
+
+    .Section {
+        padding-bottom: 50px;
+    }
 }
