--- a/src/components/Landing/Sections/13/style.module.css
+++ b/src/components/Landing/Sections/13/style.module.css
@@ -1,9 +1,9 @@
 .Section {
     width: 100%;
-    padding-bottom: 175px;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0 15px 175px 15px;
 }
 
 .Container {
@@ -26,4 +26,25 @@
     flex-direction: column;
     width: 100%;
     gap: 20px;
+}
+
+@media screen and (max-width:750px) {
+    .Container {
+        align-items: center;
+        gap: 20px;
+    }
+
+    .Container h2 {
+        font-size: 32px;
+        line-height: 35.2px;
+        text-align: center;
+    }
+
+    .Items {
+        gap: 8px;
+    }
+
+    .Section {
+        padding: 0 15px 50px 15px;
+    }
 }
