--- a/src/components/Landing/Sections/9/style.module.css
+++ b/src/components/Landing/Sections/9/style.module.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-bottom: 175px;
+    padding: 0 15px 175px 15px;
 }
 
 .Container {
@@ -86,4 +86,50 @@
     display: flex;
     flex-direction: column;
     gap: 35px;
+}
+
+@media screen and (max-width: 1000px) {
+    .Container {
+        align-items: center;
+        gap: 20px;
+    }
+
+    .Section {
+        padding: 0 15px 50px 15px;
+    }
+
+    .Container h2 {
+        font-size: 32px;
+        line-height: 35.2px;
+        text-align: center;
+    }
+
+    .List,
+    .Items,
+    .Items2 {
+        gap: 16px;
+        flex-direction: column;
+    }
+
+    .Items2 div:first-child {
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .Items {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .Items div h3,
+    .Items2 div h3 {
+        font-size: 16px;
+        line-height: 17px;
+    }
+
+    .Items div p,
+    .Items2 div p {
+        font-size: 14px;
+        line-height: 15px;
+    }
 }
