--- a/src/pages/Auth/style.module.css
+++ b/src/pages/Auth/style.module.css
@@ -4,6 +4,6 @@
     justify-content: center;
     width: 100%;
     min-height: calc(100vh - 94px);
-    padding: 40px 0;
+    padding: 40px 20px;
     height: 100vh;
 }
