--- a/src/components/SavedList/styles.module.css
+++ b/src/components/SavedList/styles.module.css
@@ -70,3 +70,21 @@
     line-height: 22px;
     cursor: pointer;
 }
+
+@media screen and (max-width: 1000px) {
+    .List {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .List {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .List {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
