--- a/src/components/SupportService/style.module.css
+++ b/src/components/SupportService/style.module.css
@@ -61,7 +61,7 @@
 }
 
 .Input button {
-    width: 30px;
+    min-width: 30px;
     height: 30px;
     border-radius: 100%;
     background: #FF8702;
@@ -82,4 +82,11 @@
 
 .Input button:hover {
     opacity: 0.7;
+}
+
+@media screen and (max-width: 768px) {
+    .SupportService {
+        height: 100%;
+        min-height: calc(100vh - 100px);
+    }
 }
