--- a/src/pages/Chats/style.module.css
+++ b/src/pages/Chats/style.module.css
@@ -3,7 +3,7 @@
     height: calc(100vh - 94px);
     display: flex;
     justify-content: center;
-    padding-bottom: 40px;
+    padding: 0 15px 40px 15px;
 }
 
 .Container {
@@ -115,4 +115,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+    .Page {
+        padding: 0;
+        height: 100vh;
+    }
+
+    .Container {
+        padding: 0;
+    }
+
+    .Content {
+        box-shadow: none;
+        padding: 20px;
+        padding-bottom: 100px;
+    }
 }
