--- a/src/pages/Profile/style.module.css
+++ b/src/pages/Profile/style.module.css
@@ -5,7 +5,7 @@
     min-height: 100vh;
     display: flex;
     align-items: flex-start;
-    padding: 40px 0;
+    padding: 40px 15px;
     justify-content: center;
     gap: 20px;
 }
@@ -165,4 +165,64 @@
     line-height: 22px;
     color: #BCBCBF;
     cursor: pointer;
+}
+
+.Sidebar.ActiveSidebar {
+    display: flex;
+    width: 100%;
+    max-width: 100%;
+}
+
+.Top {
+    width: 100%;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+}
+
+.Top svg {
+    display: none;
+    width: 30px;
+    height: 30px;
+    color: #BCBCBF;
+}
+
+.Top span {
+    width: 30px;
+}
+
+@media screen and (max-width: 1160px) {
+    .Sidebar {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .Content {
+        box-shadow: none;
+        padding: 0;
+    }
+
+    .Page {
+        padding: 0;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        padding: 20px;
+    }
+
+    .Top svg {
+        display: flex;
+    }
+
+    .Top h2 {
+        color: #BCBCBF;
+        font-size: 18px;
+        line-height: 22px;
+        text-align: center;
+    }
+
+    .Content.Support {
+        padding-top: 0;
+    }
 }
