--- a/src/pages/Session/style.module.css
+++ b/src/pages/Session/style.module.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     padding-bottom: 40px;
+    padding: 0 15px 40px 15px;
 }
 
 .Container {
@@ -150,4 +151,40 @@
     align-items: center;
     gap: 6px;
     color: #92D35E;
+}
+
+@media screen and (max-width: 768px) {
+    .Top {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .Top svg {
+        display: none;
+    }
+
+    .Top h2 {
+        font-size: 20px;
+        color: #BCBCBF;
+    }
+
+    .Content {
+        box-shadow: none;
+        padding: 20px;
+        padding-bottom: 100px;
+    }
+
+    .Page {
+        padding: 0;
+        height: 100vh;
+        min-height: 100vh;
+    }
+
+    .Container {
+        padding: 0;
+    }
+
+    .Grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
