--- a/src/pages/Test/style.module.css
+++ b/src/pages/Test/style.module.css
@@ -156,3 +156,48 @@
     width: 12px;
     height: 12px;
 }
+
+.Close {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.Back {
+    width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+    .Box h2 {
+        font-size: 24px;
+    }
+
+    .Box p {
+        font-size: 14px;
+    }
+
+    .Container {
+        justify-content: space-between;
+        height: 100vh;
+        padding: 0;
+    }
+
+    .Page {
+        min-height: 100vh;
+        max-height: 100vh;
+    }
+
+    .Top,
+    .Controlls {
+        padding: 20px 20px 0 20px;
+    }
+
+    .Box {
+        padding: 30px 20px 15px 20px;
+        border-radius: 30px 30px 0 0;
+    }
+
+    .ButtonGrid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
