--- a/src/pages/Blog/style.module.css
+++ b/src/pages/Blog/style.module.css
@@ -277,6 +277,7 @@
     align-items: center;
     justify-content: center;
     height: 225px;
+    background-size: cover !important;
 }
 
 .VideoBox .Like {
